--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,9 @@ linux (5.15.15-2+rpi1) bookworm-staging; urgency=medium
   [changes brought forward from 4.14.13-1+rpi1 by Peter Michael Green <plugwash@raspbian.org> at Wed, 07 Feb 2018 23:32:32 +0000]
   * Disable kernel builds from this package, we build our kernels from other source packages.
 
+  [changes introduced in 5.15.15-2+rpi1 by Peter Michael Green]
+  * Disable libbfd buildid support, it seems to fail to build.
+
  -- Peter Michael Green <plugwash@raspbian.org>  Sun, 13 Feb 2022 14:24:17 +0000
 
 linux (5.15.15-2) unstable; urgency=high
